--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
       
+      - name: Generate code
+        run: flutter pub run build_runner build --delete-conflicting-outputs
+      
       - name: Build Windows
         run: flutter build windows
       
@@ -53,6 +56,9 @@ jobs:
       
       - name: Install dependencies
         run: flutter pub get
+      
+      - name: Generate code
+        run: flutter pub run build_runner build --delete-conflicting-outputs
       
       - name: Build APK
         run: flutter build apk --release
@@ -89,6 +95,9 @@ jobs:
           flutter pub get
           sudo apt-get update
           sudo apt-get install -y ninja-build libgtk-3-dev
+      
+      - name: Generate code
+        run: flutter pub run build_runner build --delete-conflicting-outputs
       
       - name: Build Linux
         run: flutter build linux
