--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,43 +78,8 @@ jobs:
           name: android-aab
           path: build/app/outputs/bundle/release/app-release.aab
 
-  build-linux:
-    runs-on: ubuntu-latest
-    
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.24.0'
-          channel: 'stable'
-      
-      - name: Install dependencies
-        run: |
-          flutter pub get
-          sudo apt-get update
-          sudo apt-get install -y ninja-build libgtk-3-dev
-      
-      - name: Generate code
-        run: flutter pub run build_runner build --delete-conflicting-outputs
-      
-      - name: Build Linux
-        run: flutter build linux
-      
-      - name: Package Linux App
-        run: |
-          cd build/linux/x64/release/bundle
-          tar -czf jide-linux.tar.gz *
-      
-      - name: Upload Linux Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: linux-build
-          path: build/linux/x64/release/bundle/jide-linux.tar.gz
-
   release:
-    needs: [build-windows, build-android, build-linux]
+    needs: [build-windows, build-android]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
     
@@ -133,19 +98,12 @@ jobs:
           name: android-apk
           path: ./dist/android
       
-      - name: Download Linux Build
-        uses: actions/download-artifact@v4
-        with:
-          name: linux-build
-          path: ./dist/linux
-      
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
           files: |
             ./dist/windows/*
             ./dist/android/*
-            ./dist/linux/*
           generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
